# notar-gnotkg-assistent-cloud

./: .env.example  .gitignore  .gitleaks.toml  ARCHITECTURE.md  DATA_MODELS_AND_SCHEMA.md  DEPLOYMENT.md  FEE_CALCULATION_LOGIC.md  FUNCTIONAL_SPECIFICATION.md  IMPLEMENTATION_INSTRUCTIONS.md  LICENSE  LLM_OPTIONS.md  LLM_PROMPTS.md  LLM_PROVIDERS.md  NON_FUNCTIONAL_REQUIREMENTS.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  TECH_STACK_AND_DEPENDENCIES.md  UI_SCREENS_AND_FLOW.md  UMSETZUNGSREPORT.md  app.py  opencode_audit_readiness_instructions.md  pyproject.toml  requirements.txt  verfuegbare_LLMs.txt
.github/workflows/: ci.yml
Beispielurkunden/: README.html  README.txt
Beispielurkunden/html/: 01_Grundstueckskauf_Einfach_Einfamilienhaus.html  02_Grundstueckskauf_Mittel_Baugrundstueck_Bauverpflichtung.html  03_Grundstueckskauf_Komplex_Eigentumswohnung_WEG_Tiefgarage.html  04_Grundstueckskauf_Einfach_Gewerbeimmobilie.html  05_Grundstueckskauf_Mittel_Finanzierungsvorbehalt_Ruecktritt.html  06_Grundstueckskauf_Komplex_Mehrfamilienhaus_Mieter.html  07_Grundstueckskauf_Mittel_GbR_Erwerb.html  08_Grundstueckskauf_Komplex_Erbengemeinschaft_Niessbrauch.html  09_Testament_Einfach_Einzeltestament_Alleinerbe.html  10_Testament_Mittel_Vermaechtnisse_Teilungsanordnung.html  11_Testament_Komplex_Berliner_Testament_Pflichtteil.html  12_Testament_Mittel_Testamentsvollstreckung_Minderjaehrige.html  13_Testament_Komplex_Familienstiftung_Unternehmen.html  (+2 more)
core/: __init__.py  config.py  document_parser.py  excel_logger.py  fee_engine.py  gnotkg_catalog.py  gnotkg_checker.py  invoice_generator.py  llm_extractor.py  llm_providers.py  models.py  position_suggester.py  profile_crypto.py  provider_key_store.py
docker/: Dockerfile  docker-compose.yml
prompts/: extraction_v1.txt  extraction_v2.txt
tests/: test_document_parser.py  test_fee_engine.py  test_generator.py  test_gnotkg_catalog.py  test_gnotkg_checker.py  test_llm_extractor.py  test_llm_providers.py  test_models.py  test_position_suggester.py  test_profile_crypto.py  test_provider_key_store.py
ui/: extraction.py  helpers.py  invoice.py  review.py  sidebar.py  state.py  upload.py
(+32 files in other folders)
