[project]
name = "notar-gnotkg-assistent-cloud"
version = "0.1.0"
description = "Cloud-only API-Version der GNotKG-Honorarrechnungs-App mit optionalen Online-LLM-Providern"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Gunnar Müller" }
]
keywords = ["notar", "gnotkg", "gebührenrechnung", "honorarrechnung", "litellm", "streamlit", "cloud-llm"]

dependencies = [
    "streamlit>=1.38,<2.0",
    "litellm>=1.65.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pymupdf>=1.24",
    "pytesseract>=0.3.10",
    "python-docx>=1.1",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "jinja2>=3.1",
    "httpx>=0.27",
    "loguru>=0.7",
    "sqlalchemy>=2.0",
    "cryptography>=42.0",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "ui"]
include = [
    "app.py",
    "prompts/*",
    "templates/*",
    "data/fee_tables/*",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pip-audit>=2.7",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
